--- a/src/styles/container.sass
+++ b/src/styles/container.sass
@@ -1,11 +1,11 @@
 @use 'src/styles/media'
 @use 'src/consts'
 
-$max-width: 100%
+$width: 100%
 
 .container
   display: block
-  max-width: $max-width
+  width: $width
 
 @include media.respond-below(sm)
   .container
